--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         background-color: #0e1c31;
         display: flex;
         gap: 32px;
+        padding: 16px 0px;
         position: sticky;
         top: 0px;
         z-index: 99;
