--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       html, head, body {
         margin: 0;
         padding: 24px;
-        background-color: #0e1c31;
+        background-color: white;
       }
 
       h1 {
