--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       }
 
       .navbar {
-        background-color: white;
+        background-color: #0e1c31;
         display: flex;
         gap: 32px;
         padding: 16px 0px;
@@ -52,6 +52,9 @@
         width: 800px;
         height: 800px;
         border: dashed white;
+      }
+      p {
+          color: white;
       }
     </style>
     <!-- <script  id="vertex-shader-2d" type="notjs">
