add picture and linkedin

--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
       border: dashed white;
     }
 
+    .responsive-img {
+      width: 100%;
+      max-width: 300px;
+      /* Adjust this value as needed */
+      height: auto;
+      display: block;
+      margin: 16px 0;
+    }
+
     @media (max-width: 1024px) {
       .subheader {
         flex-direction: column;
@@ -138,7 +147,7 @@
     <h2>Data Engineer</h2>
     <h2>Machine Learning Engineer</h2>
     <h2>Software Engineer</h2>
-    <h2><a href="www.linkedin.com/in/ryan-g-pacheco">LinkedIn</a></h2>
+    <h2><a href="https://www.linkedin.com/in/ryan-g-pacheco/">LinkedIn</a></h2>
   </div>
   <div class="navbar">
     <a href="#about">About</a>
@@ -149,6 +158,7 @@
   </div>
   <div>
     <h1 id="about">About</h1>
+    <img src="resources/family.jpg" alt="Ryan Pacheco headshot" class="responsive-img" />
     <p>
       Hi, my name is Ryan Pacheco and I’m a data and machine learning engineer in the Boise, ID area. I have a Masters
       of Science in Computer Science where I tested and deployed the universities natural language processing research
@@ -252,14 +262,20 @@
       <li>Boise State University: August 2019 - May 2024
         <ul>
           <li>Master of Science Computer Science</li>
-          <li>I attended Boise State University part time while I worked full time. While at BSU I took several specialty classes such as machine learning, natural language processing, and reccomender systems. For my masters project I updated, created unit tests, and created a PyPi deploy pipeline for the departments NLP research tool known as RETICO.</li>
+          <li>I attended Boise State University part time while I worked full time. While at BSU I took several
+            specialty classes such as machine learning, natural language processing, and reccomender systems. For my
+            masters project I updated, created unit tests, and created a PyPi deploy pipeline for the departments NLP
+            research tool known as RETICO.</li>
         </ul>
       </li>
       <li>Northwest Nazarene University: August 2015 - May 2019
         <ul>
           <li>Bachelor of Science Computer Science</li>
           <li>Bachelor of Arts History</li>
-          <li>I attended Northwest Nazarene Univeristy for my undergraduate studies. while at NNU I was very active in the computer science department serving as Vice President of the Computer Club and was a summer research associate where I flew drones over wildland fires and ran the images captured through machine learning computer vision models. I also double majored in History focusing on American History.</li>
+          <li>I attended Northwest Nazarene Univeristy for my undergraduate studies. while at NNU I was very active in
+            the computer science department serving as Vice President of the Computer Club and was a summer research
+            associate where I flew drones over wildland fires and ran the images captured through machine learning
+            computer vision models. I also double majored in History focusing on American History.</li>
         </ul>
       </li>
     </ul>
