--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         <ul>
           <li>Master of Science Computer Science</li>
           <li>I attended Boise State University part time while I worked full time. While at BSU I took several
-            specialty classes such as machine learning, natural language processing, and reccomender systems. For my
+            specialty classes such as machine learning, natural language processing, and recommender systems. For my
             masters project I updated, created unit tests, and created a PyPi deploy pipeline for the departments NLP
             research tool known as RETICO.</li>
         </ul>
