add legacy project and fix how links work

--- a/index.html
+++ b/index.html
@@ -27,6 +27,22 @@
       margin: 0px;
     }
 
+    a {
+      color: white;
+    }
+
+    a:visited {
+      color: purple;
+    }
+
+    a:hover {
+      color: green;
+    }
+
+    a:active {
+      color: purple;
+    }
+
     .navbutton {
       font-size: large;
     }
@@ -147,7 +163,7 @@
     <h2>Data Engineer</h2>
     <h2>Machine Learning Engineer</h2>
     <h2>Software Engineer</h2>
-    <h2><a href="https://www.linkedin.com/in/ryan-g-pacheco/">LinkedIn</a></h2>
+    <h2><a href="https://www.linkedin.com/in/ryan-g-pacheco/" target="_blank">LinkedIn</a></h2>
   </div>
   <div class="navbar">
     <a href="#about">About</a>
@@ -242,16 +258,24 @@
   </div>
   <div>
     <h1 id="projects">Projects</h1>
+    <p>I worked on a technical challenge to represent fake medical data in a hosted database and provide an application 
+      to query the database. I also trained and hosted a simple random forest classifier that returns a true or false as to whether a patient would get an extensive answer from a doctor. This is meant to show my backend and ML pipeline skills.
+    </p>
+    <ul> 
+      <li><a href="https://rpacheco-1996.github.io/legacyPacheco.github.io/" target="_blank">Application</a></li>
+      <li><a href="https://github.com/rpacheco-1996/legacyPacheco.github.io" target="_blank">Front End, Database Populating, and Model Training Repo/a></li>
+      <li><a href="https://github.com/rpacheco-1996/legacyBackend" target="_blank">Backend Repo</a></li>
+    </ul>
     <p>
       For my masters project I created a pipeline to deploy the universities NLP research toolset to PyPi for easy
       installation. Linked below are the PyPi pages for the deployed components.
     <ul>
-      <li><a href="https://pypi.org/project/retico-core-core/">retico-core-core</a></li>
-      <li><a href="https://pypi.org/project/retico-core-slim/">retico-core-slim</a></li>
-      <li><a href="https://pypi.org/project/retico-core-sds-class/">retico-core-sds-class</a></li>
-      <li><a href="https://pypi.org/project/retico-core-rasa-nlu/">retico-core-rasa-nlu</a></li>
-      <li><a href="https://pypi.org/project/retico-core-psi/">retico-core-psi</a></li>
-      <li><a href="https://pypi.org/project/retico-core-asr/">retico-core-asr</a></li>
+      <li><a href="https://pypi.org/project/retico-core-core/" target="_blank">retico-core-core</a></li>
+      <li><a href="https://pypi.org/project/retico-core-slim/" target="_blank">retico-core-slim</a></li>
+      <li><a href="https://pypi.org/project/retico-core-sds-class/" target="_blank">retico-core-sds-class</a></li>
+      <li><a href="https://pypi.org/project/retico-core-rasa-nlu/" target="_blank">retico-core-rasa-nlu</a></li>
+      <li><a href="https://pypi.org/project/retico-core-psi/" target="_blank">retico-core-psi</a></li>
+      <li><a href="https://pypi.org/project/retico-core-asr/" target="_blank">retico-core-asr</a></li>
     </ul>
     </p>
   </div>
