add research paper

--- a/index.html
+++ b/index.html
@@ -278,6 +278,12 @@
       <li><a href="https://pypi.org/project/retico-core-asr/" target="_blank">retico-core-asr</a></li>
     </ul>
     </p>
+    <p>
+      As a part of my undergraduate research I got a paper published examining the difference between a kNN and SVM classfier in regards to classifying wildland fires.
+      <ul>
+        <li><a href="https://research.fs.usda.gov/treesearch/62328" target="_blank">kNN vs. SVM: A comparison of algorithms</a></li>
+      </ul>
+    </p>
   </div>
   <div>
     <h1 id="education">Education</h1>
