--- a/index.html
+++ b/index.html
@@ -176,13 +176,7 @@
     <h1 id="about">About</h1>
     <img src="resources/family.jpg" alt="Ryan Pacheco headshot" class="responsive-img" />
     <p>
-      Hi, my name is Ryan Pacheco and I’m a data and machine learning engineer in the Boise, ID area. I have a Masters
-      of Science in Computer Science where I tested and deployed the universities natural language processing research
-      tools to pypi to make the system more readily available. Professionally I have worked on the software engineering
-      side of machine learning, taking models that Data Scientists train and fine tune and getting them ready for
-      production along with building any infrastructure that is needed to support the models. I am passionate about
-      getting to make new exciting products that help move a buisness forward and elevates the team. I love working with
-      talanted individuals who want to colaborate to make the most exciting and high functioning code around!
+      Hi, my name is Ryan Pacheco and I’m a data and machine learning engineer in the Boise, ID area. I have a Masters of Science in Computer Science where I tested and deployed the universities natural language processing research tools to pypi to make the system more readily available. Professionally I have worked on the software engineering side of machine learning, taking models that Data Scientists train and fine tune and getting them ready for production along with building any infrastructure that is needed to support the models. I am passionate about getting to make new exciting products that help move a business forward and elevates the team. I love working with talented individuals who want to collaborate to make the most exciting and high functioning code around!
     </p>
   </div>
   <div>
