update website for Kount contract and remove legacy project until DB is back

--- a/index.html
+++ b/index.html
@@ -194,6 +194,19 @@
     <h1 id="experience">Experience</h1>
     <p>
     <ul>
+      <li>Kount Inc.: May 2018 - October 2021, August 2025 - Present
+        <ul>
+          <li>Machine Learning Engineer</li>
+          <li>Software Engineer</li>
+          <li>Software Development Intern</li>
+          <li>At Kount I worked to design, implement, and maintain the companys model governance system used to move
+            machine learning models from research to production. This system was an set of microservices that interfaced
+            with a postgres database that kept track of all model information and meta data needed for pre and post
+            processing. In addition I worked closly with data scientists to implement machine learning models into
+            existing code bases. I did this by often translating python reasearch code into production ready Go code.
+          </li>
+        </ul>
+      </li>
       <li>Pareto Health: May 2023 - June 2025
         <ul>
           <li>Data Engineer</li>
@@ -216,19 +229,6 @@
           <li>Durning my time at Micron I worked as a data engineer migrating native PySpark scripts running on local
             Hadoop to Google Clould Platform. I also worked to create a utility tool to interface with data stored in
             Google Big Query or Cloud Storage.</li>
-        </ul>
-      </li>
-      <li>Kount Inc.: May 2018 - October 2021
-        <ul>
-          <li>Machine Learning Engineer</li>
-          <li>Software Engineer</li>
-          <li>Software Development Intern</li>
-          <li>At Kount I worked to design, implement, and maintain the companys model governance system used to move
-            machine learning models from research to production. This system was an set of microservices that interfaced
-            with a postgres database that kept track of all model information and meta data needed for pre and post
-            processing. In addition I worked closly with data scientists to implement machine learning models into
-            existing code bases. I did this by often translating python reasearch code into production ready Go code.
-          </li>
         </ul>
       </li>
     </ul>
@@ -271,7 +271,7 @@
     <input type="text" id="userInput" placeholder="Type a question..." />
     <button onclick="callLambda()">Send</button>
     <pre id="responseBox" style="white-space: pre-wrap;"></pre>
-    <h2>Medical Data Mock Interface</h2>
+    <!--<h2>Medical Data Mock Interface</h2>
     <p>I worked on a technical challenge to represent fake medical data in a hosted database and provide an application
       to query the database. I also trained and hosted a simple random forest classifier that returns a true or false as
       to whether a patient would get an extensive answer from a doctor. This is meant to show my backend and ML pipeline
@@ -283,6 +283,7 @@
           Populating, and Model Training Repo/a></li>
       <li><a href="https://github.com/rpacheco-1996/legacyBackend" target="_blank">Backend Repo</a></li>
     </ul>
+  -->
     <h2>Natural Language Processing (RETICO) Pip Projects</h2>
     <p>
       For my masters project I created a pipeline to deploy the universities NLP research toolset to PyPi for easy
