update kount info

--- a/index.html
+++ b/index.html
@@ -194,16 +194,11 @@
     <h1 id="experience">Experience</h1>
     <p>
     <ul>
-      <li>Kount Inc.: May 2018 - October 2021, August 2025 - Present
+      <li>Kount Inc.: August 2025 - Present
         <ul>
-          <li>Machine Learning Engineer</li>
-          <li>Software Engineer</li>
-          <li>Software Development Intern</li>
-          <li>At Kount I worked to design, implement, and maintain the companys model governance system used to move
-            machine learning models from research to production. This system was an set of microservices that interfaced
-            with a postgres database that kept track of all model information and meta data needed for pre and post
-            processing. In addition I worked closly with data scientists to implement machine learning models into
-            existing code bases. I did this by often translating python reasearch code into production ready Go code.
+          <li>Machine Learning Engineer Contractor</li>
+          <li>In my second stint Kount I have worked to upgrade internal services to AWS Go SDK V2, as well as upgrading the internal permissioning system
+            for the AI teams event orchestrators.
           </li>
         </ul>
       </li>
@@ -229,6 +224,19 @@
           <li>Durning my time at Micron I worked as a data engineer migrating native PySpark scripts running on local
             Hadoop to Google Clould Platform. I also worked to create a utility tool to interface with data stored in
             Google Big Query or Cloud Storage.</li>
+        </ul>
+      </li>
+      <li>Kount Inc.: May 2018 - October 2021
+        <ul>
+          <li>Machine Learning Engineer</li>
+          <li>Software Engineer</li>
+          <li>Software Development Intern</li>
+          <li>At Kount I worked to design, implement, and maintain the companys model governance system used to move
+            machine learning models from research to production. This system was an set of microservices that interfaced
+            with a postgres database that kept track of all model information and meta data needed for pre and post
+            processing. In addition I worked closly with data scientists to implement machine learning models into
+            existing code bases. I did this by often translating python reasearch code into production ready Go code.
+          </li>
         </ul>
       </li>
     </ul>
